# erc20-detector

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
alembic/: env.py
alembic/fixtures/: contracts.json  standards.json
alembic/versions/: 1b8e9faa7771_create_standard_erc_20.py  22d39ca864b9_is_erc20_default_none.py  2672ba93a1d0_standard_and_contract_relationship.py  30457445bfb9_nullable_standard_in_contract_model.py  72179d204cfd_extension_model.py  d331d0b5e4b0_standard_function_and_contact_models.py  e26113374137_create_contracts.py  f04a7bda7abc_delete_contract__standard_model.py  f63956dc7849_unique_standard_name_and_contract_.py
docker/: Dockerfile  compose.dev.yml  compose.yml  entrypoint.sh
src/: __init__.py  __main__.py
src/apps/: __init__.py  routers.py
src/apps/contracts/models/: contracts.py
src/apps/contracts/repositories/: contracts.py
src/apps/contracts/routers/: contracts.py
src/apps/contracts/schemas/: contracts.py
src/apps/contracts/services/: contracts.py
src/apps/contracts/tasks/: check_erc20.py
src/apps/contracts/utils/: check_source_code.py  constants.py  scanner.py
src/apps/standards/models/: extensions.py  functions.py  standards.py
src/apps/standards/repositories/: extensions.py  functions.py  standards.py
src/apps/standards/routers/: extensions.py  standards.py
src/config/: application.py  base.py  database.py  etherscan.py  rabbitmq.py  tkq.py
src/utils/: base_repository.py  exceptions.py  unit_of_work.py
src/utils/dependencies/: get_db_session.py  unit_of_work.py
(+7 files in other folders)
